[package]
name = "litaudioplayer"
version = "0.1.0"
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]
edition = "2018"

[dependencies]
litcontainers = {path = "../../litcontainers/litcontainers"}
litaudioio = {path = "../../litaudioio"}
litaudio = {path = "../../litaudio"}
bitflags = "1.1.0"
derive-new = "0.5"
num-traits = "0.2"
portaudio-rs = {version = "0.3.1", optional = true}

[dev-dependencies]
criterion = "0.2"

[features]
default = ["portaudio"]
portaudio = ["portaudio-rs"]
